<resources>
    <string name="app_name">moviesapp</string>
    <string name="discover_your">Discover Your</string>
    <string name="favorite_show">Favorite Show</string>
    <string name="watch_now_or_watch_later">Watch Now or Watch Later</string>
    <string name="your_can_browse_">your can browse moves and shows by genre, search for specific little, or check out our recommentdation for you</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="register_now">Register Now</string>
    <string name="search_movies">Search Movies...</string>
    <string name="best_movies">Best Movies</string>
    <string name="category">Category</string>
    <string name="upcomming_movies">Upcomming Movies</string>
    <string name="explorer">Explorer</string>
</resources>