<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:layout_marginTop="128dp"
                android:layout_marginStart="32dp"
                android:textStyle="bold"
                android:text="@string/login" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="128dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/username"
                android:inputType="text"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textViewForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_your_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/orange_button_background"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:text="@string/dont_have_an_account" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/register_now" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>